fix(ResultView): revert changes to breakpoints
Since ResultView breakpoints correspond to that of Elastic Search UI,
which cannot be easily modified, we should stick to the same cutoffs of
max-width 800px (or min-width 801px).

--- a/styles/ResultView.css
+++ b/styles/ResultView.css
@@ -39,7 +39,7 @@
   padding: 0 24px;
 }
 
-@media only screen and (max-width: 1023px) {
+@media only screen and (max-width: 800px) {
   .sui-resultgrid,
   .sui-result {
     flex-direction: column;
@@ -74,7 +74,7 @@
   }
 }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 801px) {
   .sui-result__image {
     width: 200px;
     height: 200px;
